--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,12 @@
-﻿body
+﻿*{
+    margin:0;
+}
+
+body
 {
     background-color: whitesmoke;
     font-family:'raleway' ,sans-serif;
+    margin:20px;
 }
 
 .accueuil {
@@ -9,12 +14,14 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-bottom:30px;
 }
 
-.menu {
+.menu,a {
     display: flex;
     flex-direction:row;
     gap:30px;
+    text-decoration:none;
 }
 
 .liens {
@@ -31,4 +38,21 @@
 .lien2 {
     display: flex;
     gap: 30px;
+}
+
+#nota{
+    margin-top: auto;
+}
+
+h3{
+    margin-bottom:5px;
+}
+
+.recherche{
+    margin-top:30px;
+    margin-bottom:30px;
+}
+
+.filtre{
+    margin-bottom:50px;
 }
