--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,9 +4,15 @@
 
 body
 {
-    background-color: whitesmoke;
+    background-color: white;
     font-family:'raleway' ,sans-serif;
-    margin:20px;
+    margin:30px;
+}
+
+main{
+    display:flex;
+    /*justify-content:space-between;*/
+    gap:50px
 }
 
 .accueuil {
@@ -19,10 +25,15 @@ body
 
 .menu,a {
     display: flex;
-    flex-direction:row;
-    gap:30px;
-    text-decoration:none;
+    flex-direction: row;
+    gap: 30px;
+    text-decoration: none;
+    
 }
+
+    .menu a:hover {
+        border-top: 2px solid #0065FC;
+    }
 
 .liens {
     display: flex;
@@ -44,15 +55,76 @@ body
     margin-top: auto;
 }
 
-h3{
-    margin-bottom:5px;
+#titre_info {
+    margin-bottom: 55px;
+    font-size: 16px;
+    font-weight:normal;
 }
 
+h3 {
+    margin-bottom: 5px;
+    font-size: 22px;
+}
 .recherche{
+    display:flex;
     margin-top:30px;
     margin-bottom:30px;
+    gap:15px;
 }
 
 .filtre{
     margin-bottom:50px;
 }
+
+form{
+    display:flex;
+    flex-direction:row;
+}
+
+#recherche {
+    background-color: #0065FC;
+    color:white;
+}
+
+.info {
+    display: flex;
+    gap: 20px;
+}
+
+h5 {
+    font-weight:normal;
+}
+
+footer {
+    width: 1339px;
+    height: 225px;
+    background-color: #F2F2F2;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 400px;
+}
+
+.footer{
+    padding-top:20px
+}
+
+h2{
+    font-size:18px;
+    margin-top:30px;
+    margin-left:20px;
+}
+
+#hebergements {
+    width: 880px;
+    height: 626px;
+    background-color: #F2F2F2;
+}
+
+#populaires {
+    width: 420px;
+    height: 625px;
+    background-color: #F2F2F2;
+}
+
+
+
