--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,11 +13,10 @@ body
 
 .main{
     display:flex;
-    
-  
 }
 
-.accueuil {
+/*partie navigation*/
+nav {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -25,12 +24,19 @@ body
     margin-bottom:30px;
 }
 
-.menu,a {
+nav img {
+    width:auto;
+    height:auto;   
+}
+
+.menu {
     display: flex;
     flex-direction: row;
-    gap: 30px;
-    text-decoration: none;
-    
+    gap: 30px;  
+}
+
+.menu a {
+        text-decoration: none;
 }
 
 .menu a:hover {
@@ -38,11 +44,16 @@ body
         color: #0065FC;
     }
 
+/*partie filtre*/
 .liens {
     display: flex;
     flex-direction: row;
     gap:30px;
 }
+
+    .liens a {
+        text-decoration: none;
+    }
 
 .lien1 {
     display: flex;
@@ -79,36 +90,36 @@ body
     padding-left: 10px;
     padding-right: 10px;
 }
-#nota{
+
+#filtre{
     margin-top: auto;
 }
 
-#titre_info {
-    margin-bottom: 55px;
-    font-size: 16px;
-    font-weight:normal;
+.filtre {
+    margin-bottom: 50px;
 }
 
-h3 {
-    margin-bottom: 5px;
-    font-size: 22px;
+#info {
+    display: flex;
+    flex-direction: row;
+    gap:20px;
+    margin-bottom:55px;
+    font-size:16px;
+    font-weight:400;
 }
+
+/*partie formulaire*/
+form {
+    display: flex;
+    flex-direction: row;
+}
+
 .recherche{
     display:flex;
     align-items:center;
     margin-top:30px;
     margin-bottom:30px;
-    gap:15px;
-   
-}
-
-.filtre{
-    margin-bottom:50px;
-}
-
-form{
-    display:flex;
-    flex-direction:row;
+    gap:15px; 
 }
 
 #recherche {
@@ -117,15 +128,22 @@ form{
     border-radius: 0px 10px 10px 0px;
 }
 
-.info {
-    display: flex;
-    gap: 20px;
-}
-
 h5 {
     font-weight:normal;
 }
 
+h3 {
+    margin-bottom: 5px;
+    font-size: 22px;
+}
+
+h2 {
+    font-size: 18px;
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+/*partie footer*/
 footer {
     width: 1339px;
     height: 225px;
@@ -139,24 +157,63 @@ footer {
     padding-top:20px
 }
 
-h2{
-    font-size:18px;
-    margin-top:30px;
-    margin-left:20px;
-}
-
-.hebergements {
+/*partie cards*/
+.hebergement-vert {
     display: flex;
     background-color: #F2F2F2;
-    flex-direction: column;
-    gap: 25px;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
+.hebergement-bleu {
+    display: flex;
+    flex-direction: column;
+    border: solid blue;
+    width: 700px;
+    margin-left: 10px;
+    padding-top: 15px;
+    padding-bottom:30px;
+   padding-left:20px;
+}
+
+.hebergement-rouge{
+    display:flex;
+    flex-direction:column;
+    border: solid red;
+    margin-top:20px;
+    margin-bottom:20px;
+    width:95%;
+    
+}
+
+.hebergement-jaune {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    border: solid yellow;
+    width:100%;
+}
+
+.populaire-rouge{
+    display:flex;
+    flex-direction:column;
+}
+
+.populaire-jaune{
+    display:flex;
+    flex-direction:column;
+}
+
+*/
+.container {
+    display: flex;
+    flex-direction: column;
+}
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 22%;
-    height:30%;
+    width: 30%;
+    height:150px;
     border-radius: 5px;
     margin-bottom:10px;
    
@@ -166,16 +223,14 @@ h2{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-img {
+Img {
     object-fit: cover;
     border-radius: 15px 15px 15px 15px;
     width:100%;
-    height:60%;
+    height:100px;
 }
 
-.container {
-    padding: 2px 16px;
-}
+
 
 
 
