--- a/CSS/style.css
+++ b/CSS/style.css
@@ -270,56 +270,72 @@ footer {
     height: 100px;
 }
 
-.activite {
-    display: flex;
-    flex-direction: column;
-    width: 1570px;
-    /*border:solid red;*/
-
-}
-.images {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.Img-activite {
-    object-fit: cover;
-    border-radius: 15px 15px 15px 15px;
-    width: 100%;
-    height:300px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .populaires {
     width: 420px;
     height: 625px;
     background-color: #F2F2F2;
 }
+
+.activite {
+    display: flex;
+    flex-direction: column;
+   
+    /*border:solid red;*/
+
+}
+.images-activite {
+    display: flex;
+    flex-direction: row;
+    gap:25px;
+    /*border:solid yellow;*/
+}
+
+.images-activite .card-activite img {
+    object-fit: cover;
+    border-radius: 15px 15px 15px 15px;
+    width: 100%;
+    height:250px;
+}
+
+#activite{
+    margin-bottom:15px;
+}
+
+.card-activite{
+    /*border:solid red;*/
+    width:30%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
