--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,6 +38,7 @@ nav img {
 
 .menu a {
         text-decoration: none;
+        color:black;
 }
 
 .menu a:hover {
@@ -129,19 +130,9 @@ form {
     border-radius: 0px 10px 10px 0px;
 }
 
-h5 {
-    font-weight:normal;
-}
-
-h3 {
-    margin-bottom: 5px;
-    font-size: 22px;
-}
-
-h2 {
-    font-size: 18px;
-    margin-top: 30px;
-    margin-left: 20px;
+.titre{
+    font-size:22px;
+    margin-top:20px;
 }
 
 .container p{
@@ -291,10 +282,11 @@ h2 {
     height:250px;
 }
 
+/*
 #activite{
     margin-bottom:15px;
 }
-
+*/
 .card-activite{
     /*border:solid red;*/
     width:20%;
@@ -334,6 +326,11 @@ footer {
 
 .assistance p{
     margin-right:50px;
+}
+
+#star {
+    display: flex;
+    flex-direction: row;
 }
 
 
