--- a/CSS/style.css
+++ b/CSS/style.css
@@ -275,7 +275,7 @@ form {
     flex-direction: row;
     gap:48px;
     /*border:solid yellow;*/
-    width:1575px;
+    width:1400px;
     margin-left:30px;
     margin-top:10px;
 }
@@ -287,10 +287,6 @@ form {
     height:250px;
 }
 
-/*
-#activite{
-    margin-bottom:15px;
-}
 */
 .card-activite{
     /*border:solid red;*/
@@ -299,9 +295,9 @@ form {
 
 /*partie footer*/
 footer {
-    width: 1345px;
+    width: 1420px;
     height: 150px;
-    background-color: #F5F5F2;
+    background-color: #E6E6E6;
     display: flex;
     justify-content: center;
     align-items: center;
