--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,13 +31,7 @@ nav {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-bottom:30px;
-    margin-right:150px;
-}
-
-nav img {
-    width:auto;
-    height:auto;   
+    margin:2% 0 2% 0;
 }
 
 .menu {
@@ -61,14 +55,15 @@ nav img {
     display:flex;
     gap:50px;
     margin-bottom: 50px;
-    /*border: solid green;*/
+   /* border: solid green;*/
 }
 
 .liens-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width:52%;
+    width:70%;
+    gap:30px;
     /*border:solid red;*/
 }
 
@@ -77,26 +72,53 @@ nav img {
         color:black;
     }
 
- 
+.lien-filtre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-size: 18px;
+    width: 136px;
+    height: 48px;
+    /*border:solid yellow;*/
+}
+
 .lien {
-   
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    gap:10px;
     border: 2px solid #E6E6E6;
     border-radius: 20px 20px 20px 20px;
     color:blue;
+    font-size:17px;
+    width:136px;
+    height:48px;  
+    border:solid #F2F2F2;
 }
 
-.lien:hover{
+.lien-dog {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: 2px solid #E6E6E6;
+    border-radius: 20px 20px 20px 20px;
+    color: blue;
+    font-size: 17px;
+    width: 226px;
+    height: 48px;
+    border: solid #F2F2F2;
+}
+
+.lien:hover ,.lien-dog:hover{
     background-color:#C5E3FA;
 }
-
-
 
 #info {
     display: flex;
     flex-direction: row;
     gap:20px;
-    margin-bottom:55px;
-    font-size:16px;
     font-weight:400;
 }
 
@@ -152,7 +174,7 @@ input{
     display: flex;
     flex-direction: column;
     /*border: solid blue;*/
-    width: 60%;
+    width: 70%;
     margin:2.5%;
     border-radius: 15px;
     /*background-color: #E6E6E6;*/
@@ -183,7 +205,7 @@ input{
     width: 25%;
     border-radius: 15px;
     /*background-color: #E6E6E6;*/
-    margin:3.5%;
+    
     gap:25px;
     overflow:hidden; 
 }
@@ -200,6 +222,7 @@ input{
 .hebergement-bleu #next a {
     text-decoration: none;
     color: black;
+    font-size:18px;
 }
 .card-container {
     display: flex;
@@ -343,6 +366,11 @@ footer {
 .fa-grey{
 
     color:lightgray;
+}
+
+h5{
+    font-size:16px;
+    margin-bottom:1.5%;
 }
 
 
