--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
 
 #container {
     width: 100%;
-    max-width: 1400px;
+    max-width: 1440px;
     margin:auto;
     /*background:pink; */
 }
@@ -155,7 +155,6 @@ input{
     font-size:22px;
     margin-top:20px;
     margin-left:25px;
-    margin-bottom:20px;
 }
 
 .nom {
@@ -181,7 +180,6 @@ input{
     width: 70%;
     margin:2.5%;
     border-radius: 15px;
-    /*background-color: #E6E6E6;*/
 }
 
 .hebergement-rouge{
@@ -208,7 +206,6 @@ input{
     /*border: solid red;*/
     width: 25%;
     border-radius: 15px;
-    /*background-color: #E6E6E6;*/  
     gap:25px;
     overflow:hidden; 
 }
@@ -226,6 +223,7 @@ input{
     text-decoration: none;
     color: black;
     font-size:18px;
+
 }
 .card-container {
     display: flex;
@@ -272,13 +270,14 @@ input{
     object-fit: cover;
     border-radius: 15px 15px 15px 15px;
     width: 40%;
-    height: 100px;
+    height: 100%;
+    /*border:solid red;*/
 }
 
 .populaires {
     width: 420px;
     height: 625px;
-    /*background-color: #F5F5F2;*/
+    /*border:solid black;*/
 }
 
 .activite {
@@ -402,66 +401,32 @@ h5{
 
 /* sur les ecrans de 992px ou moins (tablette)*/
 @media screen and (max-width: 992px) {
-
-    .hebergement-vert {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        /*border: solid green;*/
-        width: 100%;
-        justify-content: space-around;
+    .hebergement-vert { 
+        flex-direction: column;  
+        width: 100%;  
     }
-
     .hebergement-bleu {
-        display: flex;
-        flex-direction: column;
-        /*border: solid blue;*/
         width: 100%;
         margin:auto;
-        /*border-radius: 15px;*/
-        /*background-color: #E6E6E6;*/
     }
-
     .hebergement-jaune {
-        display: flex;
-        flex-direction: row;
-        /*border: solid yellow;*/
-        width: 100%;
         margin-bottom:10px;
     }
-
     .populaire-rouge {
-        display: flex;
-        flex-direction: column;
-        /*border: solid red;*/
         width: 100%;
-        border-radius: 15px;
+        margin:auto;
     }
-
     .populaire-jaune {
-        display: flex;
         flex-direction: row;
-        justify-content: center;;
-        align-items:center;
-        width: 100%;
-        margin: 2.5%;
-        gap: 50px;
-        /*border:solid yellow;*/
+        justify-content: space-around;
+        height:144px;    
     }
-
     .card-populaire {
-        display: flex;
-        box-shadow: 20px 20px 50px 15px grey;
-        transition: 0.2s;
-        width: 90%;
-        border-radius: 15px 15px 15px 15px;
         margin:0px;
-        /*border:solid blue;*/
     }
-
-  
-
-
+    #next{
+        margin-left:20px;
+    } 
 }
 
 
