--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,10 +3,13 @@
     margin:0;
 }
 
+html{
+    width:1400px;
+}
+
 #container {
     width: 100%;
-    max-width: 1440px;
-    margin:auto;
+    margin:10px 10px 10px 10px;
     /*background:pink; */
 }
 
@@ -15,7 +18,7 @@ body
     background-color: white;
     font-family:'raleway' ,sans-serif;
     margin:auto;
-    width:1400px;
+    width:100%;
 }
 
 #header{
@@ -176,7 +179,7 @@ input{
 .hebergement-bleu {
     display: flex;
     flex-direction: column;
-    /*border: solid blue;*/
+    border: solid blue;
     width: 70%;
     margin:2.5%;
     border-radius: 15px;
@@ -310,11 +313,11 @@ footer {
     display: flex;
     flex-direction:row;
     width: 100%;
-    height:191px;
+    /*height:191px;*/
     background-color: #E6E6E6;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 40px;
     /*border:solid blue;*/
     gap: 300px;
 }
@@ -429,7 +432,99 @@ h5{
     } 
 }
 
+/* sur les ecrans de 768px ou moins (tablette)*/
+@media screen and (max-width: 768px) {
 
+    nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        margin: 2% 0 2% 0;
+    }
+
+    #header {
+        margin: auto;
+        text-align:center;
+    }
+
+    .rechercher {
+        display: flex;
+        align-items: center;
+        justify-content:center;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        gap: 15px;
+    }
+
+    .liens-container {
+        display: flex;
+        flex-wrap:wrap;
+        justify-content: center;;
+        align-items:center;
+        width: 40%;
+        gap: 30px;
+        /*border:solid red;*/
+    }
+
+    .hebergement-jaune {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items:center;
+        /*border: solid yellow;*/
+        width: 100%;
+    }
+
+    .images-activite {
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items:center;
+        gap: 90px;
+        /*border:solid yellow;*/
+        width: 100%;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        /*height:191px;*/
+        background-color: #E6E6E6;
+        justify-content: center;
+        align-items: center;
+        margin-top: 40px;
+        /*border:solid blue;*/
+        gap: 300px;
+    }
+
+    .populaire-jaune {
+        display: flex;
+        flex-direction: column;
+        width: 30%;
+        height:auto;
+       
+        border:solid yellow;
+    }
+
+    .populaire-rouge {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /*border: solid red;*/
+        width: auto;
+        border-radius: 15px;
+        gap: 25px;
+        overflow: hidden;
+    }
+
+   
+
+   
+   
+   
+}
 
 
 
