--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,7 @@ html{
 #container {
     width: 100%;
     margin:10px 10px 10px 10px;
-    /*background:pink; */
+    /*background:pink;*/ 
 }
 
 body
@@ -57,11 +57,10 @@ nav {
 /*partie filtre*/
 .filtre {
     display: flex;
-    justify-content: start;
-   
+    justify-content: start; 
     /*gap:50px;*/
     margin-bottom: 50px;
-    border: solid green;
+    /*border: solid green;*/
 }
 
 .liens-container {
@@ -146,7 +145,7 @@ form {
     margin-top:30px;
     margin-bottom:30px;
     gap:15px;
-    border:solid green;
+    /*border:solid green;*/
     
 }
 
@@ -177,47 +176,46 @@ input{
 .hebergement-vert {
     display: flex;
     flex-direction: row;
-    align-items:center;
+    align-items: center;
+    width: auto;
+    justify-content: space-around;
     /*border: solid green;*/
-    width:auto;
-    justify-content:space-around;
 }
 
 .hebergement-bleu {
     display: flex;
     flex-direction: column;
-    /*border: solid blue;*/
     width: 70%;
-    margin:2.5%;
+    margin: 2.5%;
     border-radius: 15px;
+    /*border: solid blue;*/
 }
 
-.hebergement-rouge{
-    display:flex;
-    flex-direction:column;
+.hebergement-rouge {
+    display: flex;
+    flex-direction: column;
+    margin: 2.5%;
+    width: 95%;
     /*border: solid red;*/
-    margin:2.5%;
-    width:95%;
-    
 }
 
 .hebergement-jaune {
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content: space-between;
+    width: 100%;
     /*border: solid yellow;*/
-    width:100%;
 }
 
 .populaire-rouge {
     display: flex;
     flex-direction: column;
-    align-items:baseline;
-    /*border: solid red;*/
+    align-items: baseline;
     width: 25%;
     border-radius: 15px;
-    gap:25px;
-    overflow:hidden; 
+    gap: 25px;
+    overflow: hidden;
+    /*border: solid red;*/
 }
 
 .populaire-jaune{
@@ -310,9 +308,9 @@ input{
     height:250px;
 }
 
-.card-activite{
+.card-activite {
+    width: 20%;
     /*border:solid red; */
-    width:20%;
 }
 
 /*partie footer*/
@@ -446,10 +444,9 @@ h5{
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-        width: 100%;
-        margin: 10px 10px 10px 10px;
-       border:solid black;
+        width:40%;
+        margin: 0px 0px 0px 0px;
+       /*border:solid black;*/
     }
 
     nav {
@@ -459,33 +456,35 @@ h5{
 
     #header {
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        flex-direction:column;
+        width:60%;
     }
 
-    .rechercher {  
-        width:40%;
+    .rechercher {
+        align-items: center;
+        justify-content: center;
+        width: 40%;
         /*border: solid green;*/
     }
 
-    /*
+    
     .filtre {
-        align-items: center;
-        justify-content: center;
-        gap: 50px;
-        margin-bottom: 50px;
-        width:100%;
-        border: solid green;
+       flex-direction:column;
     }
-    .liens-container {
-        display: flex;
-        flex-wrap:wrap;
-        width: 40%;
-        gap: 30px;
-        border:solid red;
+
+    #lien-filtre {
+        justify-content: start;
+        width: 120%;
+        /*border:solid yellow;*/
     }
-*/
+
+    .groupe-lien {
+       margin-bottom:20px;
+        /*border:solid orange;*/
+    }
+
     .hebergement-vert {
         flex-direction: column-reverse;
         width: 100%;
@@ -495,9 +494,9 @@ h5{
     .hebergement-jaune {
         display: flex;
         flex-direction: column;
-        border: solid yellow;
         width: 100%;
-        height:auto;
+        height: auto;
+        /*border: solid yellow;*/
     }
 
     .hebergement-bleu {
