--- a/CSS/style.css
+++ b/CSS/style.css
@@ -296,7 +296,7 @@ input{
 .images-activite {
     display: flex;
     flex-direction: row;
-    gap:90px;
+    gap:20px;
     /*border:solid yellow;*/
     width:100%;
 }
@@ -532,13 +532,13 @@ h5{
     .activite {
         justify-content: center;
         align-items: center;
-        width: 27%;
+        width: 38%;
         /*border: solid green;*/
     }
 
     .images-activite {
         flex-direction: column;
-        width: 80%;
+        width: 100%;
         /*border: solid purple;*/
     }
 
@@ -548,16 +548,17 @@ h5{
     }
 
     .images-activite .card-activite img {
-        object-fit: cover;
+        /*object-fit: cover;*/
         border-radius: 15px 15px 0px 0px;
         width: 100%;
         height: 190px;
+        /*border:solid orange;*/
     }
 
     footer {
         flex-direction: column;
         align-items: start;
-        width: 22%;
+        width: auto;
         gap: 30px;
         /*border: solid blue;*/
     }
