--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,26 +3,50 @@
     margin:0;
 }
 
-html{
-    width:1400px;
-}
-
-#container {
+body {
+    font-family: 'raleway',sans-serif;
+    margin: auto;
+    max-width: 1400px;
     width: 100%;
-    margin:10px 10px 10px 10px;
-    /*background:pink;*/ 
+    /*background-color: limegreen;*/
 }
 
-body
-{
-    background-color: white;
-    font-family:'raleway' ,sans-serif;
-    margin:auto;
+#header {
+    margin: auto;
+    width: 100%;
+}
+
+.rechercher {
+    display: flex;
+    align-items: baseline;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    gap: 15px;
+    width:100%
+    /*border:solid green;*/
+}
+
+/*partie filtre*/
+.filtre {
+    display: flex;
+    justify-content: start;
+    /*gap:50px;*/
+    margin-bottom: 50px;
     width:100%;
+    /*border: solid green;*/
 }
 
-#header{
-    margin:auto;
+#info {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    font-weight: 400;
+    width: 100%;
+}
+
+.main{
+    width:100%;
+    /*background-color:aqua;*/
 }
 
 p{
@@ -54,14 +78,6 @@ nav {
         color: #0065FC;
     }
 
-/*partie filtre*/
-.filtre {
-    display: flex;
-    justify-content: start; 
-    margin-bottom: 50px;
-    /*border: solid green;*/
-}
-
 .liens-container {
     display: flex;
     flex-direction: row;
@@ -88,6 +104,7 @@ nav {
 .groupe-lien{
     display:flex;
     flex-direction:row;
+    width:90%;
     gap:30px;
     /*border:solid orange;*/
 }
@@ -125,27 +142,10 @@ nav {
     background-color:#C5E3FA;
 }
 
-#info {
-    display: flex;
-    flex-direction: row;
-    gap:20px;
-    font-weight:400;
-}
-
 /*partie formulaire*/
 form {
     display: flex;
     flex-direction: row;
-}
-
-.rechercher{
-    display:flex;
-    align-items:baseline;
-    margin-top:30px;
-    margin-bottom:30px;
-    gap:15px;
-    /*border:solid green;*/
-    
 }
 
 #recherche {
@@ -176,8 +176,8 @@ input{
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: auto;
-    justify-content: space-around;
+    width: 100%;
+    justify-content: space-between;
     /*border: solid green;*/
 }
 
@@ -185,7 +185,7 @@ input{
     display: flex;
     flex-direction: column;
     width: 70%;
-    margin: 2.5%;
+    /*margin: 2.5%;*/
     border-radius: 15px;
     /*border: solid blue;*/
 }
@@ -210,7 +210,7 @@ input{
     display: flex;
     flex-direction: column;
     align-items: baseline;
-    width: 25%;
+    width: 30%;
     border-radius: 15px;
     gap: 25px;
     overflow: hidden;
@@ -220,7 +220,7 @@ input{
 .populaire-jaune{
     display:flex;
     flex-direction:column;
-    width:95%;
+    width:100%;
     margin:2.5%;
     gap:50px;
     /*border:solid yellow;*/
@@ -290,14 +290,16 @@ input{
 .activite {
     display: flex;
     flex-direction: column;
+    width:100%;
     /*border:solid red;*/
 }
 .images-activite {
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    width: 100%;
+    justify-content:space-between;
+    /*gap:20px;*/
     /*border:solid yellow;*/
+    width:100%;
 }
 
 .images-activite .card-activite img {
@@ -317,11 +319,11 @@ footer {
     display: flex;
     flex-direction: row;
     width: 100%;
+    /*height:191px;*/
     background-color: #E6E6E6;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+    /*align-items: center;*/
     margin-top: 40px;
-    gap: 300px;
     /*border:solid blue;*/
 }
 
@@ -335,7 +337,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-content:start;
-    height: 100%;
+    width:20%;
     /*border: solid red;*/
 }
 .hebergement a {
@@ -347,7 +349,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-content: start;
-    height: 100%;
+    width: 20%;
     /*border: solid green;*/
 }
 .assistance a {
@@ -360,7 +362,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-content: start;
-    height: 100%;
+    width: 20%;
     /*border: solid orange;*/
 }
 #star-populaire {
@@ -405,51 +407,91 @@ h5{
     background-color: #F2F2F2;
 }
 
-/* media query pour les ecrans de 992px ou moins (tablettes)*/
+/* sur les ecrans de 992px ou moins (tablette)*/
 @media screen and (max-width: 992px) {
+
+    #lien-filtre {
+        justify-content: start;
+        width:20%;
+        /*border:solid yellow;*/
+    }
+
+    .groupe-lien {
+        width: 90%;
+        margin-bottom: 10px;
+        /*border:solid orange;*/
+    }
+
     .hebergement-vert {
-        flex-direction: column;  
-        width: 100%;  
+        flex-direction: column;
+        width: 100%;
     }
     .hebergement-bleu {
         width: 100%;
-        margin:auto;
+        /*margin:auto;*/
+        /*background-color: beige;*/
     }
     .hebergement-jaune {
         margin-bottom:10px;
+        width:100%;
+        /*background-color:blueviolet;*/
     }
+
     .populaire-rouge {
         width: 100%;
-        margin:auto;
+        justify-content:space-between;
+        /*gap:0px;*/
+        /*margin:auto;*/
+        /*background-color:gold;*/
     }
     .populaire-jaune {
         flex-direction: row;
-        justify-content: space-around;
-        height:144px;    
+        /*justify-content: space-around;*/
+        width:95%;
+        /*background-color:brown;*/
     }
     .card-populaire {
         margin:0px;
     }
+
+    .images-activite {
+        width: 100%;
+    }
+
     #next{
         margin-left:20px;
-    } 
+    }
+
+    footer { 
+        justify-content:space-around;
+        background-color: #E6E6E6;
+        margin-top: 40px;
+        width:100%;
+        /*border:solid blue;*/
+    }
 }
 
-/* media query pour les ecrans de 768px ou moins (mobiles)*/
+/* sur les ecrans de 768px ou moins (tablette)*/
 @media screen and (max-width: 768px) {
 
-    #container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width:40%;
-        margin: 0px 0px 0px 0px;
-       /*border:solid black;*/
+    h2{
+        text-align:center;
+    }
+
+    .groupe-lien {
+       width:100%;
+       margin-bottom:10px;
+        /*border:solid orange;*/
+    }
+
+    .lien{
+        width:100%;
     }
 
     nav {
         flex-direction: column;
         justify-content: space-around;
+        width:100%;
     }
 
     #header {
@@ -457,7 +499,7 @@ h5{
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width:60%;
+        width:100%;
     }
 
     .rechercher {
@@ -467,7 +509,6 @@ h5{
         /*border: solid green;*/
     }
 
-    
     .filtre {
        flex-direction:column;
     }
@@ -478,10 +519,10 @@ h5{
         /*border:solid yellow;*/
     }
 
-    .groupe-lien {
-       margin-bottom:20px;
+    /*.groupe-lien {
+       margin-bottom:20px;*/
         /*border:solid orange;*/
-    }
+    /*}*/
 
     .hebergement-vert {
         flex-direction: column-reverse;
@@ -498,7 +539,7 @@ h5{
     }
 
     .hebergement-bleu {
-        width: 40%;
+        width: 100%;
         /*border: solid blue;*/
     }
 
@@ -518,7 +559,7 @@ h5{
     .populaire-rouge {
         justify-content: center;
         align-items: center;
-        width: 40%;
+        width: 100%;
         /*border: solid red;*/  
     }
 
@@ -530,7 +571,7 @@ h5{
     .activite {
         justify-content: center;
         align-items: center;
-        width: 38%;
+        width: 100%;
         /*border: solid green;*/
     }
 
@@ -556,13 +597,14 @@ h5{
     footer {
         flex-direction: column;
         align-items: start;
-        width: auto;
+        width: 100%;
         gap: 30px;
         /*border: solid blue;*/
     }
 
     .propos, .assistance, .hebergement {
         margin-left: 20px;
+        width:100%;
         /*border: solid red;*/
     }
 
