--- a/CSS/style.css
+++ b/CSS/style.css
@@ -139,7 +139,7 @@ nav {
 }
 
 .lien:hover ,.lien-dog:hover{
-    background-color:#C5E3FA;
+    background-color:#DEEBFF;
 }
 
 /*partie formulaire*/
@@ -179,15 +179,16 @@ input{
     width: 100%;
     justify-content: space-between;
     /*border: solid green;*/
+   
 }
 
 .hebergement-bleu {
     display: flex;
     flex-direction: column;
     width: 70%;
-    /*margin: 2.5%;*/
     border-radius: 15px;
     /*border: solid blue;*/
+    background:#F2F2F2;
 }
 
 .hebergement-rouge {
@@ -224,6 +225,7 @@ input{
     margin:2.5%;
     gap:50px;
     /*border:solid yellow;*/
+    background:#F2F2F2;
 }
 
 .hebergement-bleu #next a {
@@ -302,12 +304,12 @@ input{
     width:100%;
 }
 
-.images-activite .card-activite img {
-    object-fit: cover;
-    border-radius: 15px 15px 15px 15px;
-    width: 100%;
-    height:250px;
-}
+    .images-activite .card-activite img {
+        object-fit: cover;
+        border-radius: 15px 15px 0px 0px;
+        width: 100%;
+        height: 250px;
+    }
 
 .card-activite {
     width: 20%;
@@ -328,8 +330,9 @@ footer {
 }
 
 .propos a {
-    text-decoration:none;
-    color:black;
+    text-decoration: none;
+    font-weight: 400;
+    margin-top:10px;
     /*border:solid red;*/
 }
 
@@ -342,8 +345,8 @@ footer {
 }
 .hebergement a {
     text-decoration: none;
-    color: black;
-   
+    font-weight: 400;
+    margin-top: 10px;
 }
 .hebergement {
     display: flex;
@@ -354,7 +357,8 @@ footer {
 }
 .assistance a {
     text-decoration: none;
-    color: black;
+    font-weight: 400;
+    margin-top: 10px;
     /*border:solid yellow;*/
 }
 
